--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     margin: 0;
     background-color: teal;
     color: silver;
-    font-family: sans-serif;
+    font-family: Tahoma;
     font-size: 20px;
     line-height: 1.4;
 }
