--- a/style.css
+++ b/style.css
@@ -1,84 +1,103 @@
-body{
-    width: 100%;
-    height: 100vh;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
     margin: 0;
-    background-color: teal;
-    color: silver;
-    font-family: Tahoma;
-    font-size: 20px;
-    line-height: 1.4;
+    font-family: 'Poppins', sans-serif;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-image: linear-gradient(
+      115deg,
+      rgba(58, 58, 158, 0.8),
+      rgba(136, 136, 206, 0.7)
+    ),
+    url(https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg);
+    width: 100vw;
+    color: white;
 }
-h1, p{
- text-align: center;
- margin: 0px;
- margin-bottom: 0.5rem;
- font-size: 25px;
- font-weight: bold; 
+
+#title {
+    margin-top: 30px;
+    text-align: center;
+    margin-bottom: 7px;
+    font-weight: 400;
+    padding: .6rem;
 }
-::placeholder{
-    padding-left: 7px;
+
+#description {
+    margin-top: 0;
+    text-align: center;
+    font-style: italic;
+    padding: .2rem;
 }
-hr{
-    max-width: 100%;
-}
-.survey-form{
+
+#survey-form {
+    background-color: rgba(27, 27, 50, 0.8);
     width: 80%;
-    background-color: navy;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 20px;
-    max-width: 500px;
-}
-input, button, select, textarea{
-    margin: 15px 2px 0 2px;
-    font-size: medium;
-    width: 100%;
-    min-height: 3em;
-    border-radius: 10px;
-}
-select{
-    min-height: 2.4em;
-    width: 100%;
-    margin-bottom: 15px;
-}
-label{
-    display: block;
-    margin: 0.5rem 0;
-    cursor: default;
-}
-form{
     margin: 0 auto;
-    margin-top: 0em;
-    margin-bottom: 15px;
-    max-width: 500px;
-    min-height: 300px;
-    border: 4px;
-    border-radius: 0.25rem;
-    padding: 2.5rem 0.625rem;
+    border-radius: 10px;
+    max-width: 800px;
+    min-width: 500px;
+    padding: 2.5rem 1.5rem;
 }
-.input-checkbox, .input-radio{
+
+.form-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto 1.25rem auto;
+}
+
+label {
+    width: 90%;
+    font-size: 18px;
+    padding-top: 8px;
+    display: block;
+    margin-bottom: 0.5rem;
+}
+
+input, select {
+    width: 90%;
+    height: 40px;
+    border-radius: 5px;
+    padding-left: 10px;
+    font-size: 16px;
+}
+
+input[type="radio"], input[type="checkbox"]  {
+    height: 20px;
+    width: 10%;
+    margin-left: 20px;    
+}
+
+.inline {
+    width: unset;
     margin: 0 0.5em 0 0;
     vertical-align: middle;
-    width: unset;
+  }
+
+.form-radio, .div-checkbox {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-bottom: 5px;
 }
-button{
-    margin-top: 15px;
-    max-height: 100px;
-    font-size: large;
-}
-textarea{
-    font-size: large;
-    padding: 15px;
-    max-width: 93%;
-}
-select{
-    padding-left: 7px;
-}
-button{
-    display: block;
-    margin: 40px auto;
-    padding: 15px;
-    font-size: 23px;
-    background: #d0d0d5;
-    border: 3px solid #3b3b4f;
+
+textarea {
+    width: 90%;
+    font-style: 16px ;
+    height: 100px;
+} 
+
+input[type="submit"] {
+    width: 90%;
+    color: white;
+    background-color: green;
+    border: 1px solid green;
+    margin-bottom: 50px;
 }
